--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "plop": "^2.4.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "url-loader": "^2.1.0",
