--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-cdn": "vue-cli-service build --model cdn",
+    "analyz": "vue-cli-service build --mode analyz",
     "lint": "vue-cli-service lint"
+
   },
   "dependencies": {
     "@sentry/browser": "^5.6.3",
@@ -21,6 +24,9 @@
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.12.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "compression-webpack-plugin": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "plop": "^2.4.0",
