--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "c": "plop --plopfile ./tools/plop/index.js"
   },
   "dependencies": {
     "@sentry/browser": "^5.6.3",
