--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-cdn": "vue-cli-service build --model cdn",
     "analyz": "vue-cli-service build --mode analyz",
     "lint": "vue-cli-service lint",
-    "c": "plop --plopfile ./tools/plop/index.js"
+	"c": "plop --plopfile ./tools/plop/index.js"
   },
   "dependencies": {
     "@sentry/browser": "^5.6.3",
@@ -41,10 +41,9 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/strongly-recommended",
       "eslint:recommended"
     ],
-    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
     }
